--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ header-img: "img/bg-it4.jpg"
 
     <p>Hi, I am <strong>Zeping Long</strong>，you can call me <strong>LG</strong>. I am an older software engineer and currently working for quantitative investment</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/longzeping">Github·BY</a>.</p>
+    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/longzeping">Github·LZP</a>.</p>
     
     <p>I am a sports enthusiast, I like fitness, basketball and travel.</p>
 
