--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ header-img: "img/bg-it4.jpg"
 
     <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢篮球、旅行。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/longzeping">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/5f23b2a77d88">👉LZP</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/longzeping">👉GitHub·LZP</a> 与 简书主页<a href="https://http://www.jianshu.com/u/5f23b2a77d88">👉LZP</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
